--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-
+          
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY_2509 }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ vars.GCP_PROJECT_ID }}
 
 
