--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -3,6 +3,7 @@ name: Deploy to Cloud Run
 env:
   SERVICE_NAME: seoulworld-two-run
   REGIONS: asia-northeast3
+
 on:
   push:
     branches:
@@ -17,51 +18,38 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          
+
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ vars.GCP_PROJECT_ID }}
-
 
       - name: Configure Docker for Artifact Registry
         run: |
-          echo "Setting up GCP configuration..."
           gcloud auth configure-docker asia-northeast3-docker.pkg.dev --quiet
-          echo "GCP configuration completed"
-          
-      - name: Verify GCP Authentication
-        run: |
-          echo "Verifying GCP authentication..."
-          gcloud auth list
-          gcloud config list
-          gcloud config get-value account
-          gcloud config get-value project
-          echo "GCP authentication verified"
 
       - name: Build and Push Docker Image
         run: |
-          echo "Creating environment variables..."
           echo "REACT_APP_SUPABASE_API_URL=${{ secrets.REACT_APP_SUPABASE_API_URL }}" >> .env
-          echo "REACT_APP_SUPABASE_ANON_KEY=${{secrets.REACT_APP_SUPABASE_ANON_KEY}}" >> .env
-          echo "REACT_APP_SUPABASE_SLACK_FUNCTION_URL=${{secrets.REACT_APP_SUPABASE_SLACK_FUNCTION_URL}}" >> .env
-          
-          echo "Building Docker image..."
+          echo "REACT_APP_SUPABASE_ANON_KEY=${{ secrets.REACT_APP_SUPABASE_ANON_KEY }}" >> .env
+          echo "REACT_APP_SUPABASE_SLACK_FUNCTION_URL=${{ secrets.REACT_APP_SUPABASE_SLACK_FUNCTION_URL }}" >> .env
+
           export DOCKER_BUILDKIT=1
           docker build \
-            --cache-from asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:latest \
-            --tag asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:latest \
-            --tag asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.sha }} \
+            -t asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:latest \
+            -t asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.sha }} \
             .
-          
-          echo "Pushing Docker images..."
+
           docker push asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:latest
           docker push asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
-          echo "Deploying to Cloud Run..."
           gcloud run deploy $SERVICE_NAME \
             --image asia-northeast3-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/hirc-repo/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.sha }} \
             --platform managed \
